Fix width of slideshow caption so text does not overflow container

--- a/css/flexslider.css
+++ b/css/flexslider.css
@@ -100,6 +100,9 @@ html[xmlns] #issuem-featured-article-slideshowholder .slides {display: block;}
 #issuem-featured-article-slideshowholder .flex-caption .flex-caption-content {
     padding: 3px;
     padding: 14px 20px 17px;
+     -webkit-box-sizing: border-box; 
+    -moz-box-sizing: border-box;   
+    box-sizing: border-box;         
 }
 
 #issuem-featured-article-slideshowholder .flex-caption .flex-caption-content .featured_slider_title {
