--- a/css/issuem.css
+++ b/css/issuem.css
@@ -28,7 +28,7 @@
 	margin-left: auto;
 	margin-right: auto;
 	display: block;
-	margin-bottom: 25px;
+	margin-bottom: 35px;
 	border: 1px solid black;
 }
 
